syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "slot";

service TokenService {
  rpc GenerateToken (TokenGenerationRequest) returns (google.protobuf.StringValue);
}


message TokenGenerationRequest {
  string id = 1;
  google.protobuf.Timestamp startAt = 2;
}

